watt_increases use double instead of int
